force-app/main/default/objects/animalos__Setting__c/animalos__Setting__c.object-meta.xml
<CustomObject>
    <label>Setting</label>
    <nameField>
        <label>Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>