force-app/main/default/objects/animalos__Setting__c/fields/animalos__API_Key__c.field-meta.xml
<CustomField>
    <fullName>animalos__API_Key__c</fullName>
    <label>API Key</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>