force-app/main/default/objects/animalos__Setting__c/fields/animalos__Conditions__c.field-meta.xml
<CustomField>
    <fullName>animalos__Conditions__c</fullName>
    <label>Conditions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>