force-app/main/default/objects/animalos__Setting__c/fields/animalos__Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>animalos__Email_Template_ID__c</fullName>
    <label>Email Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>