force-app/main/default/objects/animalos__Setting__c/fields/animalos__Endpoint__c.field-meta.xml
<CustomField>
    <fullName>animalos__Endpoint__c</fullName>
    <defaultValue>&quot;https://api.openai.com/v1/&quot;</defaultValue>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>