force-app/main/default/objects/animalos__Setting__c/fields/animalos__Font__c.field-meta.xml
<CustomField>
    <fullName>animalos__Font__c</fullName>
    <label>Font</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arial Unicode MS</fullName>
            </value>
            <value>
                <fullName>sans-serif</fullName>
            </value>
            <value>
                <fullName>Times</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>monospace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>