force-app/main/default/objects/animalos__Setting__c/fields/animalos__Language_Model__c.field-meta.xml
<CustomField>
    <fullName>animalos__Language_Model__c</fullName>
    <defaultValue>&quot;gpt-4&quot;</defaultValue>
    <label>Language Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>