force-app/main/default/objects/animalos__Setting__c/fields/animalos__Last_Calculation_Datetime__c.field-meta.xml
<CustomField>
    <fullName>animalos__Last_Calculation_Datetime__c</fullName>
    <label>Last Calculation Datetime</label>
    <type>DateTime</type>
</CustomField>