force-app/main/default/objects/animalos__Setting__c/fields/animalos__Logo_File_Id__c.field-meta.xml
<CustomField>
    <fullName>animalos__Logo_File_Id__c</fullName>
    <label>Logo File Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>