force-app/main/default/objects/animalos__Setting__c/fields/animalos__Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>animalos__Max_Tokens__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Max Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>