force-app/main/default/objects/animalos__Setting__c/fields/animalos__More_About_Me_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>animalos__More_About_Me_Font_Color__c</fullName>
    <label>More About Me Font Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>