force-app/main/default/objects/animalos__Setting__c/fields/animalos__My_Ideal_Home_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>animalos__My_Ideal_Home_Border_Color__c</fullName>
    <label>My Ideal Home Border Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>