force-app/main/default/objects/animalos__Setting__c/fields/animalos__Order__c.field-meta.xml
<CustomField>
    <fullName>animalos__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>