force-app/main/default/objects/animalos__Setting__c/fields/animalos__Processor__c.field-meta.xml
<CustomField>
    <fullName>animalos__Processor__c</fullName>
    <label>Processor</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>