force-app/main/default/objects/animalos__Setting__c/fields/animalos__Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>animalos__Scope_Size__c</fullName>
    <label>Scope Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>