force-app/main/default/objects/animalos__Setting__c/fields/animalos__Send_Report_Emails_To__c.field-meta.xml
<CustomField>
    <fullName>animalos__Send_Report_Emails_To__c</fullName>
    <label>Send Report Emails To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>