force-app/main/default/objects/animalos__Setting__c/fields/animalos__Setting__c.field-meta.xml
<CustomField>
    <fullName>animalos__Setting__c</fullName>
    <label>Setting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>