force-app/main/default/objects/animalos__Setting__c/fields/animalos__Show_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>animalos__Show_QR_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show QR Code</label>
    <type>Checkbox</type>
</CustomField>