force-app/main/default/objects/animalos__Setting__c/fields/animalos__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>