force-app/main/default/objects/animalos__Setting__c/fields/animalos__Temperature__c.field-meta.xml
<CustomField>
    <fullName>animalos__Temperature__c</fullName>
    <defaultValue>0.7</defaultValue>
    <label>Temperature</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>