force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Address.recordType-meta.xml
<RecordType>
    <fullName>animalos__Address</fullName>
    <active>false</active>
    <label>Address</label>
</RecordType>