force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Animal_Actions.recordType-meta.xml
<RecordType>
    <fullName>animalos__Animal_Actions</fullName>
    <active>true</active>
    <label>Animal Actions</label>
</RecordType>