force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Animal_Referral.recordType-meta.xml
<RecordType>
    <fullName>animalos__Animal_Referral</fullName>
    <active>true</active>
    <label>Animal Referral</label>
</RecordType>