force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Inspectorate_Application.recordType-meta.xml
<RecordType>
    <fullName>animalos__Inspectorate_Application</fullName>
    <active>true</active>
    <label>Inspectorate Application</label>
</RecordType>