force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Manage_Block_Actions.recordType-meta.xml
<RecordType>
    <fullName>animalos__Manage_Block_Actions</fullName>
    <active>true</active>
    <label>Manage Block Actions</label>
</RecordType>