force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__OpenAI.recordType-meta.xml
<RecordType>
    <fullName>animalos__OpenAI</fullName>
    <active>true</active>
    <label>OpenAI</label>
</RecordType>