force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__PDF_Configuration.recordType-meta.xml
<RecordType>
    <fullName>animalos__PDF_Configuration</fullName>
    <active>true</active>
    <label>PDF Configuration</label>
</RecordType>