force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Profile_Portfolio.recordType-meta.xml
<RecordType>
    <fullName>animalos__Profile_Portfolio</fullName>
    <active>true</active>
    <label>Profile Portfolio</label>
</RecordType>