force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Record_Type_Picklist_Values.recordType-meta.xml
<RecordType>
    <fullName>animalos__Record_Type_Picklist_Values</fullName>
    <active>true</active>
    <label>Record Type Picklist Values</label>
</RecordType>