force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Sequential_Batch.recordType-meta.xml
<RecordType>
    <fullName>animalos__Sequential_Batch</fullName>
    <active>true</active>
    <label>Sequential Batch</label>
</RecordType>