force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Start_Referral.recordType-meta.xml
<RecordType>
    <fullName>animalos__Start_Referral</fullName>
    <active>true</active>
    <label>Start Referral</label>
</RecordType>