force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Status_Tracking.recordType-meta.xml
<RecordType>
    <fullName>animalos__Status_Tracking</fullName>
    <active>true</active>
    <label>Status Tracking</label>
</RecordType>