force-app/main/default/objects/animalos__Setting__c/recordTypes/animalos__Trigger_Handler.recordType-meta.xml
<RecordType>
    <fullName>animalos__Trigger_Handler</fullName>
    <active>true</active>
    <label>Trigger Handler</label>
</RecordType>