force-app/main/default/objects/animalos__Setting__c/recordTypes/aos_Assessment_Score.recordType-meta.xml
<RecordType>
    <fullName>aos_Assessment_Score</fullName>
    <active>true</active>
    <label>Assessment Score</label>
</RecordType>