force-app/main/default/objects/animalos__Setting__c/listViews/animalos__All.listView-meta.xml
<ListView>
    <fullName>animalos__All</fullName>
    <columns>NAME</columns>
    <columns>animalos__Is_Active__c</columns>
    <columns>animalos__Setting__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>