force-app/main/default/objects/animalos__Setting__c/listViews/animalos__Rollup.listView-meta.xml
<ListView>
    <fullName>animalos__Rollup</fullName>
    <columns>NAME</columns>
    <columns>animalos__SObject_Type__c</columns>
    <columns>animalos__Is_Active__c</columns>
    <columns>animalos__Order__c</columns>
    <columns>animalos__Processor__c</columns>
    <columns>animalos__Scope_Size__c</columns>
    <columns>animalos__Type__c</columns>
    <columns>animalos__Conditions__c</columns>
    <columns>animalos__Last_Calculation_Datetime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>animalos__Setting__c.animalos__Sequential_Batch</value>
    </filters>
    <filters>
        <field>animalos__Processor__c</field>
        <operation>contains</operation>
        <value>CalcRollups</value>
    </filters>
    <label>Rollup</label>
</ListView>