force-app/main/default/objects/animalos__Setting__c/listViews/animalos__Trigger_Handlers.listView-meta.xml
<ListView>
    <fullName>animalos__Trigger_Handlers</fullName>
    <columns>NAME</columns>
    <columns>animalos__SObject_Type__c</columns>
    <columns>animalos__Is_Active__c</columns>
    <columns>animalos__Order__c</columns>
    <columns>animalos__Processor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>animalos__Setting__c.animalos__Trigger_Handler</value>
    </filters>
    <label>Trigger Handlers</label>
</ListView>