force-app/main/default/objects/animalos__Setting__c/listViews/aos_Assessment_Score.listView-meta.xml
<ListView>
    <fullName>aos_Assessment_Score</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>animalos__Setting__c.aos_Assessment_Score</value>
    </filters>
    <label>Assessment Score</label>
</ListView>