force-app/main/default/objects/animalos__Setting__c/listViews/Inspectorate.listView-meta.xml
<ListView>
    <fullName>Inspectorate</fullName>
    <columns>NAME</columns>
    <columns>animalos__Is_Active__c</columns>
    <columns>animalos__Order__c</columns>
    <columns>animalos__Processor__c</columns>
    <columns>animalos__Conditions__c</columns>
    <columns>animalos__SObject_Type__c</columns>
    <columns>animalos__Scope_Size__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Inspectorate</value>
    </filters>
    <label>Inspectorate</label>
</ListView>